{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 177,
  "lineage": "270072d6-0838-b77a-599c-bd249fc74de0",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "failover_firewall_hc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-09-19T06:42:30.153-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/deep-responder-328907/global/firewalls/failover-hc",
            "log_config": [],
            "name": "failover-hc",
            "network": "https://www.googleapis.com/compute/v1/projects/deep-responder-328907/global/networks/ip-failover-vpc",
            "priority": 1000,
            "project": "deep-responder-328907",
            "self_link": "https://www.googleapis.com/compute/v1/projects/deep-responder-328907/global/firewalls/failover-hc",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.failover_vpc",
            "google_project_service.required_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "failover_firewall_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-09-19T06:42:30.398-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/deep-responder-328907/global/firewalls/failover-http-traffic",
            "log_config": [],
            "name": "failover-http-traffic",
            "network": "https://www.googleapis.com/compute/v1/projects/deep-responder-328907/global/networks/ip-failover-vpc",
            "priority": 1000,
            "project": "deep-responder-328907",
            "self_link": "https://www.googleapis.com/compute/v1/projects/deep-responder-328907/global/firewalls/failover-http-traffic",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "client"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "nginx-gateway"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.failover_vpc",
            "google_project_service.required_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "failover_firewall_ssh_iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-09-19T06:42:30.234-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/deep-responder-328907/global/firewalls/failover-ssh-iap",
            "log_config": [],
            "name": "failover-ssh-iap",
            "network": "https://www.googleapis.com/compute/v1/projects/deep-responder-328907/global/networks/ip-failover-vpc",
            "priority": 1000,
            "project": "deep-responder-328907",
            "self_link": "https://www.googleapis.com/compute/v1/projects/deep-responder-328907/global/firewalls/failover-ssh-iap",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.failover_vpc",
            "google_project_service.required_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "failover_firewall_vrrp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "112"
              }
            ],
            "creation_timestamp": "2022-09-19T06:42:29.777-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/deep-responder-328907/global/firewalls/failover-vrrp",
            "log_config": [],
            "name": "failover-vrrp",
            "network": "https://www.googleapis.com/compute/v1/projects/deep-responder-328907/global/networks/ip-failover-vpc",
            "priority": 1000,
            "project": "deep-responder-328907",
            "self_link": "https://www.googleapis.com/compute/v1/projects/deep-responder-328907/global/firewalls/failover-vrrp",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "nginx-gateway"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "nginx-gateway"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.failover_vpc",
            "google_project_service.required_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "client-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20220822",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/deep-responder-328907/zones/europe-west1-b/disks/client"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/deep-responder-328907/zones/europe-west1-b/instances/client",
            "instance_id": "8837822369289850674",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "usyX9UgQJ3U=",
            "name": "client",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/deep-responder-328907/global/networks/ip-failover-vpc",
                "network_ip": "10.100.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/deep-responder-328907/regions/europe-west1/subnetworks/ip-failover-subnet",
                "subnetwork_project": "deep-responder-328907"
              }
            ],
            "project": "deep-responder-328907",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/deep-responder-328907/zones/europe-west1-b/instances/client",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "client"
            ],
            "tags_fingerprint": "Lil4YJpUN-c=",
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "google_compute_network.failover_vpc",
            "google_compute_subnetwork.failover_subnet",
            "google_project_service.required_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "failover_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/deep-responder-328907/global/networks/ip-failover-vpc",
            "mtu": 0,
            "name": "ip-failover-vpc",
            "project": "deep-responder-328907",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/deep-responder-328907/global/networks/ip-failover-vpc"
          },
          "dependencies": [
            "google_project_service.required_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "failover_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-09-19T06:42:30.578-07:00",
            "gateway_address": "10.100.0.1",
            "id": "projects/deep-responder-328907/regions/europe-west1/subnetworks/ip-failover-subnet",
            "ip_cidr_range": "10.100.0.0/16",
            "name": "ip-failover-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/deep-responder-328907/global/networks/ip-failover-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "deep-responder-328907",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "192.168.1.0/24",
                "range_name": "floating-ip-2"
              },
              {
                "ip_cidr_range": "192.168.0.0/24",
                "range_name": "floating-ip-1"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/deep-responder-328907/regions/europe-west1/subnetworks/ip-failover-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.failover_vpc",
            "google_project_service.required_api"
          ]
        }
      ]
    }
  ]
}